# knowledge-graph-hybrid-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: README.md  __init__.py  config.py  main.py
app/answer/: README.md  __init__.py  service.py
app/api/: README.md  __init__.py  routes.py
app/eval/: README.md  __init__.py  metrics.py
app/extract/: README.md  __init__.py  deterministic.py  llm.py
app/graph/: README.md  __init__.py  base.py  in_memory.py  neo4j_store.py
app/ingest/: README.md  __init__.py  chunker.py  parser.py  pipeline.py
app/models/: README.md  __init__.py  schemas.py
app/retrieve/: README.md  __init__.py  engine.py  vector_store.py
data/: README.md
data/extracted/: README.md
data/llm_test_runs/: README.md
data/parsed/: README.md
data/raw_pdfs/: README.md
tests/: README.md  test_smoke.py
