[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-graph-hybrid-rag"
version = "0.1.0"
description = "MVP PDF-to-knowledge-graph query engine with grounded retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "neo4j>=5.23.0",
  "openai>=1.40.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "PyMuPDF>=1.24.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
  "spacy>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
